upd the conclusion

--- a/Scripts/TF-IDF.ipynb
+++ b/Scripts/TF-IDF.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "TF-IDF doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. \n",
+    "TF-IDF doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. Although for document3 it finds the word `lifecycle` which is indeed one of the keywords and is part of the title of the resource. For document2 it find metadata and data which are of course keywords, but we need to identify also the word `type` which is not found. \n",
     "\n",
     "TextBlob provides options for n-grams and also connection to WordNet ontology which could be useful, so will look more into it.\n",
     "\n",
