testing tf-idf and synonym finding for extracted terms

--- a/Scripts/TF-IDF.ipynb
+++ b/Scripts/TF-IDF.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "from textblob import TextBlob as tb\n",
     "import nltk\n",
+    "from beautifultable import BeautifulTable\n",
     "#nltk.download('punkt')\n",
     "\n",
     "# blob is the the text where to look for the word\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,70 +186,219 @@
      "text": [
       "\n",
       "Top 15 terms in document 1 | 01_research-data-defined.en.txt\n",
-      "\t| TERM: To | TF-IDF: 0.01542\n",
-      "\t| TERM: NSF | TF-IDF: 0.0054\n",
-      "\t| TERM: As | TF-IDF: 0.00463\n",
-      "\t| TERM: You | TF-IDF: 0.00385\n",
-      "\t| TERM: community | TF-IDF: 0.00385\n",
-      "\t| TERM: It | TF-IDF: 0.00308\n",
-      "\t| TERM: Some | TF-IDF: 0.00308\n",
-      "\t| TERM: includes | TF-IDF: 0.00308\n",
-      "\t| TERM: NIH | TF-IDF: 0.00231\n",
-      "\t| TERM: National | TF-IDF: 0.00231\n",
-      "\t| TERM: By | TF-IDF: 0.00231\n",
-      "\t| TERM: concepts | TF-IDF: 0.00231\n",
-      "\t| TERM: here | TF-IDF: 0.00231\n",
-      "\t| TERM: NEH | TF-IDF: 0.00231\n",
-      "\t| TERM: From | TF-IDF: 0.00231\n",
+      "+-------------+--------+\n",
+      "|    TERM     | TF-IDF |\n",
+      "+-------------+--------+\n",
+      "|     To      | 0.015  |\n",
+      "+-------------+--------+\n",
+      "|     NSF     | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     As      | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     You     | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|  community  | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|    Some     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     It      | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  includes   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     NIH     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  National   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    From     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  concepts   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "| definitions | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    here     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     NEH     | 0.002  |\n",
+      "+-------------+--------+\n",
       "\n",
       "Top 15 terms in document 2 | 02_types-of-data-and-metadata.en.txt\n",
-      "\t| TERM: Metadata | TF-IDF: 0.00901\n",
-      "\t| TERM: metadata | TF-IDF: 0.00901\n",
-      "\t| TERM: In | TF-IDF: 0.00573\n",
-      "\t| TERM: information | TF-IDF: 0.00491\n",
-      "\t| TERM: These | TF-IDF: 0.0041\n",
-      "\t| TERM: Can | TF-IDF: 0.00328\n",
-      "\t| TERM: elements | TF-IDF: 0.00328\n",
-      "\t| TERM: Elements | TF-IDF: 0.00328\n",
-      "\t| TERM: use | TF-IDF: 0.00246\n",
-      "\t| TERM: our | TF-IDF: 0.00246\n",
-      "\t| TERM: Core | TF-IDF: 0.00246\n",
-      "\t| TERM: analysis | TF-IDF: 0.00246\n",
-      "\t| TERM: identify | TF-IDF: 0.00246\n",
-      "\t| TERM: Dublin | TF-IDF: 0.00246\n",
-      "\t| TERM: refer | TF-IDF: 0.00246\n",
+      "+-------------+--------+\n",
+      "|    TERM     | TF-IDF |\n",
+      "+-------------+--------+\n",
+      "|     To      | 0.015  |\n",
+      "+-------------+--------+\n",
+      "|     NSF     | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     As      | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     You     | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|  community  | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|    Some     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     It      | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  includes   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     NIH     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  National   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    From     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  concepts   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "| definitions | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    here     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     NEH     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  metadata   | 0.009  |\n",
+      "+-------------+--------+\n",
+      "|  Metadata   | 0.009  |\n",
+      "+-------------+--------+\n",
+      "|     In      | 0.006  |\n",
+      "+-------------+--------+\n",
+      "| information | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|    These    | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|  Elements   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     Can     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  elements   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  identify   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     use     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    Core     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     our     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  analysis   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|   Dublin    | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    refer    | 0.002  |\n",
+      "+-------------+--------+\n",
       "\n",
       "Top 15 terms in document 3 | 03_research-data-lifecycle.en.txt\n",
-      "\t| TERM: lifecycle | TF-IDF: 0.01277\n",
-      "\t| TERM: activities | TF-IDF: 0.00479\n",
-      "\t| TERM: complex | TF-IDF: 0.00319\n",
-      "\t| TERM: Center | TF-IDF: 0.00319\n",
-      "\t| TERM: more | TF-IDF: 0.00319\n",
-      "\t| TERM: center | TF-IDF: 0.00319\n",
-      "\t| TERM: Curation | TF-IDF: 0.00319\n",
-      "\t| TERM: Here | TF-IDF: 0.00319\n",
-      "\t| TERM: curation | TF-IDF: 0.00319\n",
-      "\t| TERM: brings | TF-IDF: 0.0016\n",
-      "\t| TERM: stage | TF-IDF: 0.0016\n",
-      "\t| TERM: few | TF-IDF: 0.0016\n",
-      "\t| TERM: resources | TF-IDF: 0.0016\n",
-      "\t| TERM: refers | TF-IDF: 0.0016\n",
-      "\t| TERM: Once | TF-IDF: 0.0016\n"
+      "+-------------+--------+\n",
+      "|    TERM     | TF-IDF |\n",
+      "+-------------+--------+\n",
+      "|     To      | 0.015  |\n",
+      "+-------------+--------+\n",
+      "|     NSF     | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     As      | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|     You     | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|  community  | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|    Some     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     It      | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  includes   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     NIH     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  National   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    From     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  concepts   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "| definitions | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    here     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     NEH     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  metadata   | 0.009  |\n",
+      "+-------------+--------+\n",
+      "|  Metadata   | 0.009  |\n",
+      "+-------------+--------+\n",
+      "|     In      | 0.006  |\n",
+      "+-------------+--------+\n",
+      "| information | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|    These    | 0.004  |\n",
+      "+-------------+--------+\n",
+      "|  Elements   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|     Can     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  elements   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  identify   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     use     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    Core     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|     our     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  analysis   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|   Dublin    | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    refer    | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  lifecycle  | 0.013  |\n",
+      "+-------------+--------+\n",
+      "| activities  | 0.005  |\n",
+      "+-------------+--------+\n",
+      "|   center    | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|    more     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  Curation   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|    Here     | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|   Center    | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|  curation   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|   complex   | 0.003  |\n",
+      "+-------------+--------+\n",
+      "|    Once     | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  practice   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|    their    | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|  yourself   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|   o'clock   | 0.002  |\n",
+      "+-------------+--------+\n",
+      "|   circle    | 0.002  |\n",
+      "+-------------+--------+\n"
      ]
     }
    ],
    "source": [
+    "table = BeautifulTable()\n",
+    "table.column_headers = [\"TERM\", \"TF-IDF\"]\n",
+    "\n",
     "doclist = [document1, document2, document3]\n",
     "docnames = [\"01_research-data-defined.en.txt\",\"02_types-of-data-and-metadata.en.txt\",\"03_research-data-lifecycle.en.txt\"]\n",
     "topNwords = 15;\n",
     "\n",
     "for i, doc in enumerate(doclist):\n",
-    "    print(\"\\nTop {} terms in document {} | {}\".format(topwords, i + 1, docnames[i]))\n",
+    "    print(\"\\nTop {} terms in document {} | {}\".format(topNwords, i + 1, docnames[i]))\n",
     "    scores = {term: tfidf(term, doc, doclist) for term in doc.words}\n",
     "    sortedTerms = sorted(scores.items(),key=lambda x: x[1], reverse=True)\n",
     "    \n",
     "    for term, score in sortedTerms[:topNwords]:\n",
-    "        print(\"\\t| TERM: {} | TF-IDF: {}\".format(term, round(score, 5)))"
+    "         table.append_row([term, round(score, 5)])\n",
+    "    \n",
+    "    print(table)"
    ]
   },
   {
@@ -257,7 +407,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "TF-IDF doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. Although for document3 it finds the word `lifecycle` which is indeed one of the keywords and is part of the title of the resource. For document2 it find metadata and data which are of course keywords, but we need to identify also the word `type` which is not found. \n",
+    "TF-IDF doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. \n",
     "\n",
     "TextBlob provides options for n-grams and also connection to WordNet ontology which could be useful, so will look more into it.\n",
     "\n",
