testing tf-idf and synonym finding for extracted terms

--- a/Scripts/TF-IDF+NLTK+wordnet.ipynb
+++ b/Scripts/TF-IDF+NLTK+wordnet.ipynb
@@ -512,11 +512,13 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "TF-IDF doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. \n",
+    "**TF-IDF** doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. \n",
     "\n",
     "TextBlob provides options for n-grams and also connection to WordNet ontology which could be useful, so will look more into it.\n",
     "\n",
-    "Full list of identified key words so far [HERE](https://docs.google.com/spreadsheets/d/1Dj4UAh6U5jAelcsz-gDCdDE9JRVhwaNei0Ctn8m0Ui4/edit?usp=sharing)"
+    "**WordNet** finds multiple definitions and synsets (synonyms) for most of the general words, however if provided specific e.g. computer science algorithm names, or specific terms, it doesn find any synonyms, nor descriptions of any of them.\n",
+    "\n",
+    "**Full list** of identified key words so far [HERE](https://docs.google.com/spreadsheets/d/1Dj4UAh6U5jAelcsz-gDCdDE9JRVhwaNei0Ctn8m0Ui4/edit?usp=sharing)"
    ]
   }
  ],
