fixing markdown issues

--- a/Scripts/TF-IDF+NLTK+wordnet+wikipedia.ipynb
+++ b/Scripts/TF-IDF+NLTK+wordnet+wikipedia.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "## TF-IDF implementation\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
     "\n",
     "IF-IDF is implemented in order to check whether the terms extracted from LOs will have anything in common with the terms that would be extracted with manual MOOC analysis and to compare with of the two methods will bring better results in the classification part\n",
     "\n",
@@ -44,7 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now it's time to supply several documents and see what happens:"
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
+    "### Now it's time to supply several documents and see what happens:\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -174,7 +177,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, finally the **MAIN()** method: traversing through the documents and output the terms and their frequencies"
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
+    "### Now, finally the **MAIN()** method: traversing through the documents and output the terms and their frequencies\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -855,7 +860,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try with **Wikipedia** data as notology and see if it will return better result than WordNet"
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
+    "### Let's try with **Wikipedia** data as ontology and see if it will return better result than WordNet\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -1134,7 +1141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
+    "### NOTES\n",
+    "### --------------------------------------------------------------------------------------------------------------------------------------\n",
     "\n",
     "**TF-IDF** doesn't output the necessary result, I need n-grams selected as a combined keyword and these are often very general words like `for example` or `key concept` etc. in order to classify the text into the GOAL element. \n",
     "\n",
