--- a/Scripts/FullPreprocessing.ipynb
+++ b/Scripts/FullPreprocessing.ipynb
@@ -12,8 +12,10 @@
     "- sentence by sentence split\n",
     "- lower case\n",
     "- noise removal \n",
-    "    - punctuation STAYS\n",
-    "    - SOME stopwords stay\n",
+    "    - SOME punctuation STAYS \n",
+    "        - point, single space and comma\n",
+    "    - SOME stopwords stay \n",
+    "        - between,we,i,in,here,that,you,it,that,this,there,few,if,so,to,a,an,is,until,while\n",
     "    - mention removal\n",
     "- word normalization\n",
     "    - tokenization \n",
@@ -39,9 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /home/ani/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import all necessary modules for EVERYTHING here\n",
     "\n",
@@ -53,6 +64,7 @@
     "import os\n",
     "import sys\n",
     "import os.path\n",
+    "import string\n",
     "\n",
     "# ---- for TF-IDF & NLTK\n",
     "import math\n",
@@ -62,7 +74,7 @@
     "from beautifultable import BeautifulTable\n",
     "#nltk.download('punkt')\n",
     "#nltk.download('wordnet')\n",
-    "\n",
+    "from pathlib import Path\n",
     "\n",
     "import re, string, unicodedata\n",
     "import contractions\n",
@@ -70,90 +82,111 @@
     "from bs4 import BeautifulSoup\n",
     "from nltk import word_tokenize, sent_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import LancasterStemmer, WordNetLemmatizer"
+    "#nltk.download('stopwords')\n",
+    "from nltk.stem import LancasterStemmer, WordNetLemmatizer\n",
+    "\n",
+    "from nltk import sent_tokenize, word_tokenize, pos_tag\n",
+    "# nltk.download('averaged_perceptron_tagger')\n",
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------------------ METHODS  --------------------------------------------------------\n",
+    "\n",
+    "# Create a set of all allowed characters.\n",
+    "# {...} is the syntax for a set literal in Python.\n",
+    "allowedPunct = {\",\", \".\", \" \"}.union(string.ascii_lowercase)\n",
+    "\n",
+    "#stopWords = stopwords.words('english')\n",
+    "#print(stopWords)\n",
+    "\n",
+    "# function #1    \n",
+    "def splitSentences(iFile, oPathNoExt):\n",
+    "    print(\"[Splitting sentences on file:] \" + iFile.name)\n",
+    "    # the WITH keyword makes it possible to omit the file.close() function at the end to close the file\n",
+    "    # all file processing happens there\n",
+    "    # create a file and open it to write inside\n",
+    "    with open(oPathNoExt + \"_sent.txt\",\"w\") as oFile:\n",
+    "        print(oFile.name)\n",
+    "        text = iFile.read()    \n",
+    "        # initial text is full of new lines, so we have to remove them first. \n",
+    "        text = text.replace(\"\\n\", \" \")    \n",
+    "        # have the sentences split and print them one by one\n",
+    "        sentences = sent_tokenize(text)\n",
+    "        # write to the output file\n",
+    "        for sent in sentences:\n",
+    "            oFile.write(sent+\"\\n\")\n",
+    "    oFile.close()\n",
+    "    \n",
+    "\n",
+    "# function #2 (optional)\n",
+    "# only leaves comma, space, dot\n",
+    "# read input file, save to output file\n",
+    "def removePunctuation(iFile, oPathNoExt):\n",
+    "    #text = re.sub(\"[\\[\\].;@#$%^&*:()][^,]\", \" \", file)\n",
+    "    print(\"[Punctuation removal on file:] \" + iFile.name)\n",
+    "    if filePath.endswith(\"_sent.txt\"):\n",
+    "        with open(oPathNoExt + \"_noPunct.txt\",\"w\") as oFile:\n",
+    "            oFile.write(\"\".join([letter for letter in iFile if letter in allowed]))\n",
+    "        oFile.close()\n",
+    "    else:\n",
+    "        pass\n",
+    "      \n",
+    "# function #3\n",
+    "def sentTokenize(iFile, oPathNoExt):\n",
+    "    print(\"[Tokenizing file:] \" + iFile.name)\n",
+    "\n",
+    "    if iFile.name.endswith(\"_sent.txt\"):\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        print(\"BASE NAME: \", baseName)\n",
+    "        OFName = baseName + \".en_tokens.txt\"\n",
+    "        with open(OFName, \"w\") as oFile:\n",
+    "            words = oFile.read()\n",
+    "            words = pos_tag()\n",
+    "            print(words+\"\\n\")\n",
+    "        oFile.close()\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[music] welcome to the lesson on cloudcomputing and cyber physical systems\n",
-      "in this video lecture, we will look intothe relationship between cloud computing and the future of cyber physicalsystems or embedded systems in general\n",
-      "let's talk about cloud computing\n",
-      "in the simplest form,cloud computing is about utilizing computational power as a utilitylike electricity or gas\n",
-      "instead of building your ownin-house computational capabilities, you rent them out from peoplewho have already designed them\n",
-      "this model of renting out resources basedon one's needs has several benefits\n",
-      "first, flexibility\n",
-      "the resources you utilize like storage,computing capacity or network can scale up orscale down based on your needs\n",
-      "second, low maintenance\n",
-      "as the servers are managedby your provider, you don't have to worry aboutmaintenance or software updates\n",
-      "third, paper use, you only pay forthe resources you use\n",
-      "fourth, security, cloud servicescan maintain better security and hire better professionals comparedto a small business or startup in the words of a researcherin the field of security, cloud is using somebody else's computer\n",
-      "in another lesson, we talked aboutdifferent protocols like gsm, bluetooth, and zigby that enable us to connectour cyber physical systems\n",
-      "we also pointed out the one's that supportgcpip to enable ip based communication\n",
-      "when you take a small embedded device andassign it an ip address, you can uniquely identify it,remotely access and control it andshare its data across the internet\n",
-      "what you have done is that you havebuilt an internet of things device or iot device\n",
-      "you had a device, a thing, andyou made it a part of the internet\n",
-      "irrespective of all the hype andwell justified interest in the internet of things, at its very basic level,it is a very large number of embedded systems talking to eachother via ip networks\n",
-      "if you look at it from this perspective,to an embedded systems engineer, iot is more of an evolution of the technologiesthat were already available to him\n",
-      "the reason we are talking aboutthe internet of things is that it shares a lot of similaritieswith cyber physical systems\n",
-      "iot is about monitoring or sensing thereal world with interconnected sensors\n",
-      "cyber physical systems are the same\n",
-      "any platform that billsitself as an iot platform can also be cyber physicalsystems platform\n",
-      "from now on, in this lesson,we will use the term iot instead of cyber physicalsystems as most of the cloud platforms like to associatethemselves with the internet of things\n",
-      "cloud computing andiot compliment each other very well\n",
-      "in the vision of internet of things, you have hundreds of thousandsof sensors generating data\n",
-      "cloud computing helps you store andprocess that data\n",
-      "you can see an example of trackingpeople's fitness on the screen\n",
-      "if you are an iot device andnetwork provider, you can focus on your core competence,building and connecting sensors\n",
-      "you don't have to worry aboutbuilding your own it infrastructure\n",
-      "another problem is makingsense of all that data\n",
-      "there are cloud computing toolsavailable that will help you analyze and generate actionableintelligence from your data\n",
-      "if you are monitoring traffic flow or power consumption ina large housing society, or monitoring the air quality of a largecity, you need a strong it infrastructure\n",
-      "cloud computing offers you that\n",
-      "this growing interest incombining cloud computing and internet of things has createdon new field called cloud iot\n",
-      "cloud iot is providingon demand computational infrastructure designed specifically forthe internet of things\n",
-      "cloud iot providers canoffer different services\n",
-      "here are some basic considerationsto look into when choosing one\n",
-      "do they offer support for the communication hardware andsoftware you will be using\n",
-      "do they support the communicationprotocols you are using in your solution\n",
-      "do they offer you remotenode management like controlling your device remotely, issuingcommands or upgrading its firmware\n",
-      "do they offer any data analytics\n",
-      "if yes, is it according to your needs\n",
-      "what kind of pricing model do they have\n",
-      "are they charging by the numberof nodes or sensors you have or by the number of resources you use\n",
-      "here is a short list of different cloudiot platforms and service providers\n",
-      "in this lesson, we looked atthe merging of cloud computing and the internet of things phenomenon\n",
-      "the next video lecture, we will look at a phenomenon thatis opposite to cloud computing\n",
-      "[sound]\n",
-      "None\n"
+      "[Tokenizing file:] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_Raw.txt\n",
+      "[Tokenizing file:] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_Raw_sent.txt\n",
+      "BASE NAME:  /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'close' is not defined",
+     "ename": "UnsupportedOperation",
+     "evalue": "not readable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-0d5ffd3004c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremovePunctuation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m                 \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurFile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nTotal number of {} {} files found.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"TXT\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'close' is not defined"
+      "\u001b[0;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-96-ff6d449c5997>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m                     \u001b[0;31m#removePunctuation(curFile, fileExtRemoved)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                     \u001b[0;31m#splitSentences(curFile, fileExtRemoved)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                     \u001b[0msentTokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfileExtRemoved\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0;31m#if(outpFile.)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-95-cece7c0960b0>\u001b[0m in \u001b[0;36msentTokenize\u001b[0;34m(iFile, oPathNoExt)\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0mOFName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbaseName\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".en_tokens.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOFName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moFile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m             \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpos_tag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnsupportedOperation\u001b[0m: not readable"
      ]
     }
    ],
    "source": [
-    "# only leaves commas \n",
-    "def removePunctuation(text):\n",
-    "    text = re.sub(\"[\\[\\].;@#$%^&*:()][^,]\", \" \", file)\n",
+    "# ----------------------------------------------- PROGRAM  -------------------------------------------------------\n",
     "\n",
-    "\n",
+    "# LOCATION OF TEST FILES: /media/sf_Shared_Folder/TEST/RAW\n",
     "# path = \"/media/sf_Shared_Folder/Courses/Coursera Downloads Processed\"\n",
-    "path = \"/media/sf_Shared_Folder/TEST/02_3-4-cloud-and-cyber-physical-systems 2\"\n",
+    "path = \"/media/sf_Shared_Folder/TEST/RAW\"\n",
     "\n",
     "counter = 0\n",
     "\n",
@@ -167,21 +200,35 @@
     "            pass\n",
     "\n",
     "        else:\n",
+    "            # check for file extension and if not TXT, continue and disregard the current file\n",
     "            if not filePath.endswith(\".txt\"):\n",
     "                pass\n",
     "            else: \n",
-    "                counter += 1\n",
-    "                #fileName = print(os.path.abspath(filePath))\n",
-    "                curFile = open(filePath, 'r')\n",
-    "                #outpFile = open(os.path.abspath)\n",
-    "                nameNoExt = os.path.splitext(os.path.abspath(filePath))[0]\n",
-    "                outpFile = nameNoExt + \"_PROC.txt\"\n",
-    "                \n",
+    "                # else create a new txt file with \"_PROC.txt\" to store the output and process the original file\n",
+    "                try: \n",
+    "                    counter += 1\n",
+    "                    #fileName = print(os.path.abspath(filePath))\n",
+    "                    curFile = open(filePath, 'r')\n",
+    "                    #outpFile = open(os.path.abspath)\n",
+    "\n",
+    "                    fileExtRemoved = os.path.splitext(os.path.abspath(filePath))[0]\n",
+    "                    #outpFileBase = open(FileExtRemoved + \"_PROC.txt\",\"w\")\n",
+    "\n",
+    "                    \"\"\"\n",
+    "                    call each processing function here and pass it the file\n",
+    "                    First argument: current input file\n",
+    "                    Second argument: path without extension of the current file\n",
+    "                    the path will be used to save the output file with the same name and same location\n",
+    "                    but with different file ending based on what the fuunction did\n",
+    "                    \"\"\"  \n",
+    "                    #removePunctuation(curFile, fileExtRemoved)\n",
+    "                    #splitSentences(curFile, fileExtRemoved)\n",
+    "                    sentTokenize(curFile, fileExtRemoved)\n",
+    "\n",
+    "                #if(outpFile.)\n",
     "                #open(outpFile, 'x')\n",
-    "                text = curFile.read().strip()\n",
-    "                print(text)\n",
-    "                print(removePunctuation(text))\n",
-    "                close(curFile)\n",
+    "                finally: \n",
+    "                    curFile.close()\n",
     "        \n",
     "print(\"\\nTotal number of {} {} files found.\".format(counter, \"TXT\"))"
    ]
