tokenize and POS tagging

--- a/Scripts/FullPreprocessing.ipynb
+++ b/Scripts/FullPreprocessing.ipynb
@@ -41,18 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 281,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /home/ani/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import all necessary modules for EVERYTHING here\n",
     "\n",
@@ -65,6 +56,7 @@
     "import sys\n",
     "import os.path\n",
     "import string\n",
+    "import time\n",
     "\n",
     "# ---- for TF-IDF & NLTK\n",
     "import math\n",
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,21 +99,25 @@
     "\n",
     "# function #1    \n",
     "def splitSentences(iFile, oPathNoExt):\n",
-    "    print(\"[Splitting sentences on file:] \" + iFile.name)\n",
-    "    # the WITH keyword makes it possible to omit the file.close() function at the end to close the file\n",
-    "    # all file processing happens there\n",
-    "    # create a file and open it to write inside\n",
-    "    with open(oPathNoExt + \"_sent.txt\",\"w\") as oFile:\n",
-    "        print(oFile.name)\n",
-    "        text = iFile.read()    \n",
-    "        # initial text is full of new lines, so we have to remove them first. \n",
-    "        text = text.replace(\"\\n\", \" \")    \n",
-    "        # have the sentences split and print them one by one\n",
-    "        sentences = sent_tokenize(text)\n",
-    "        # write to the output file\n",
-    "        for sent in sentences:\n",
-    "            oFile.write(sent+\"\\n\")\n",
-    "    oFile.close()\n",
+    "    if iFile.name.endswith(\"_Raw.txt\"):\n",
+    "        print(\"[Splitting sentences on file:] \" + iFile.name)\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        OFName = baseName + \".en_sent.txt\"\n",
+    "        \n",
+    "        # the WITH keyword makes it possible to omit the file.close() function at the end to close the file\n",
+    "        # all file processing happens there\n",
+    "        # create a file and open it to write inside\n",
+    "        with open(OFName,\"w\") as oFile:\n",
+    "            print(oFile.name)\n",
+    "            text = iFile.read()    \n",
+    "            # initial text is full of new lines, so we have to remove them first. \n",
+    "            text = text.replace(\"\\n\", \" \")    \n",
+    "            # have the sentences split and print them one by one\n",
+    "            sentences = sent_tokenize(text)\n",
+    "            # write to the output file\n",
+    "            for sent in sentences:\n",
+    "                oFile.write(sent+\"\\n\")\n",
+    "        oFile.close()\n",
     "    \n",
     "\n",
     "# function #2 (optional)\n",
@@ -129,8 +125,8 @@
     "# read input file, save to output file\n",
     "def removePunctuation(iFile, oPathNoExt):\n",
     "    #text = re.sub(\"[\\[\\].;@#$%^&*:()][^,]\", \" \", file)\n",
-    "    print(\"[Punctuation removal on file:] \" + iFile.name)\n",
     "    if filePath.endswith(\"_sent.txt\"):\n",
+    "        print(\"[Punctuation removal on file: ] \" + iFile.name)\n",
     "        with open(oPathNoExt + \"_noPunct.txt\",\"w\") as oFile:\n",
     "            oFile.write(\"\".join([letter for letter in iFile if letter in allowed]))\n",
     "        oFile.close()\n",
@@ -139,16 +135,46 @@
     "      \n",
     "# function #3\n",
     "def sentTokenize(iFile, oPathNoExt):\n",
-    "    print(\"[Tokenizing file:] \" + iFile.name)\n",
-    "\n",
     "    if iFile.name.endswith(\"_sent.txt\"):\n",
+    "        print(\"[Tokenizing file: ] \" + iFile.name)\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
-    "        print(\"BASE NAME: \", baseName)\n",
+    "        # print(\"BASE NAME: \", baseName)\n",
     "        OFName = baseName + \".en_tokens.txt\"\n",
+    "        \n",
     "        with open(OFName, \"w\") as oFile:\n",
-    "            words = oFile.read()\n",
-    "            words = pos_tag()\n",
-    "            print(words+\"\\n\")\n",
+    "            tokens = iFile.read()\n",
+    "            tokens = word_tokenize(tokens)\n",
+    "            for tok in tokens:\n",
+    "                oFile.write(tok+\"\\n\")\n",
+    "        oFile.close()\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "\n",
+    "# function #4 - partOfSpeechTag Tagging\n",
+    "def POStag(iFile, oPathNoExt):\n",
+    "    if iFile.name.endswith(\"_tokens.txt\"):\n",
+    "        print(\"[Part of Speech tagging: ] \" + iFile.name)\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        # print(\"BASE NAME: \", baseName)\n",
+    "        OFName = baseName + \".en_tokPOStag.txt\"\n",
+    "        \n",
+    "        tokenList = iFile.read().split()\n",
+    "        \n",
+    "        with open(OFName, \"w\") as oFile:            \n",
+    "            taggedTok = pos_tag(tokenList)\n",
+    "            tokens = []\n",
+    "            \n",
+    "            for tok in taggedTok:\n",
+    "# UNallowedPunct = {\",\", \".\", \"[\", \"]\", \"*\", \"/\", \"+\", \"-\", \"%\", \"#\", \"(\", \")\", \"-\", \"_\", \";\", \":\", \"'\", \"\\\"\", \"`\"}.union(string.ascii_lowercase)\n",
+    "                UNallowedPunct = {\",\", \".\", \"[\", \"]\"}.union(string.ascii_lowercase)\n",
+    "                if tok[0] in UNallowedPunct:\n",
+    "                    # if token is a punctuation symbol, don't save in the output\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    tokens.append(tok)\n",
+    "                    oFile.write(str(tok)+\"\\n\")\n",
+    "                    \n",
     "        oFile.close()\n",
     "    else:\n",
     "        pass"
@@ -156,28 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Tokenizing file:] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_Raw.txt\n",
-      "[Tokenizing file:] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_Raw_sent.txt\n",
-      "BASE NAME:  /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms\n"
-     ]
-    },
-    {
-     "ename": "UnsupportedOperation",
-     "evalue": "not readable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-ff6d449c5997>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m                     \u001b[0;31m#removePunctuation(curFile, fileExtRemoved)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                     \u001b[0;31m#splitSentences(curFile, fileExtRemoved)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                     \u001b[0msentTokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurFile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfileExtRemoved\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0;31m#if(outpFile.)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-95-cece7c0960b0>\u001b[0m in \u001b[0;36msentTokenize\u001b[0;34m(iFile, oPathNoExt)\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0mOFName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbaseName\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".en_tokens.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOFName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moFile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m             \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m             \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpos_tag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnsupportedOperation\u001b[0m: not readable"
+      "[Splitting sentences on file:] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_Raw.txt\n",
+      "/media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_sent.txt\n",
+      "[Tokenizing file: ] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_sent.txt\n",
+      "[Part of Speech tagging: ] /media/sf_Shared_Folder/TEST/RAW/01_use-cases-of-micro-controller-platforms.en_tokens.txt\n",
+      "[Splitting sentences on file:] /media/sf_Shared_Folder/TEST/RAW/02_reconfigurable-platforms-fpgas.en_Raw.txt\n",
+      "/media/sf_Shared_Folder/TEST/RAW/02_reconfigurable-platforms-fpgas.en_sent.txt\n",
+      "[Tokenizing file: ] /media/sf_Shared_Folder/TEST/RAW/02_reconfigurable-platforms-fpgas.en_sent.txt\n",
+      "[Part of Speech tagging: ] /media/sf_Shared_Folder/TEST/RAW/02_reconfigurable-platforms-fpgas.en_tokens.txt\n",
+      "[Splitting sentences on file:] /media/sf_Shared_Folder/TEST/RAW/04_embedded-processors-vs-fpgas.en_Raw.txt\n",
+      "/media/sf_Shared_Folder/TEST/RAW/04_embedded-processors-vs-fpgas.en_sent.txt\n",
+      "[Tokenizing file: ] /media/sf_Shared_Folder/TEST/RAW/04_embedded-processors-vs-fpgas.en_sent.txt\n",
+      "[Part of Speech tagging: ] /media/sf_Shared_Folder/TEST/RAW/04_embedded-processors-vs-fpgas.en_tokens.txt\n",
+      "\n",
+      "Total number of 12 TXT files found.\n"
      ]
     }
    ],
@@ -222,11 +247,10 @@
     "                    but with different file ending based on what the fuunction did\n",
     "                    \"\"\"  \n",
     "                    #removePunctuation(curFile, fileExtRemoved)\n",
-    "                    #splitSentences(curFile, fileExtRemoved)\n",
+    "                    splitSentences(curFile, fileExtRemoved)\n",
     "                    sentTokenize(curFile, fileExtRemoved)\n",
-    "\n",
-    "                #if(outpFile.)\n",
-    "                #open(outpFile, 'x')\n",
+    "                    POStag(curFile, fileExtRemoved)\n",
+    "                    \n",
     "                finally: \n",
     "                    curFile.close()\n",
     "        \n",
