--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -84,15 +84,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 349,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'about', 'above', 'after', 'again', 'against', 'all', 'am', 'an', 'and', 'any', 'are', 'as', 'at', 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', 'can', 'did', 'do', 'does', 'doing', 'don', 'down', 'during', 'each', 'few', 'for', 'from', 'further', 'had', 'has', 'have', 'having', 'he', 'her', 'here', 'hers', 'herself', 'him', 'himself', 'his', 'how', 'i', 'if', 'in', 'into', 'is', 'it', 'it', 'its', 'itself', 'just', 'me', 'more', 'most', 'my', 'myself', 'no', 'nor', 'not', 'now', 'of', 'off', 'on', 'once', 'only', 'or', 'other', 'our', 'ours', 'ourselves', 'out', 'over', 'own', 's', 'same', 'she', 'should', 'so', 'some', 'such', 't', 'than', 'that', 'the', 'their', 'theirs', 'them', 'themselves', 'then', 'there', 'these', 'they', 'this', 'those', 'through', 'to', 'too', 'under', 'until', 'up', 'very', 'was', 'we', 'were', 'what', 'when', 'where', 'which', 'while', 'who', 'whom', 'why', 'with', 'you', 'your', 'yours', 'yourself', 'yourselves']\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------------------------ METHODS  --------------------------------------------------------\n",
     "\n",
     "# Create a set of all allowed characters.\n",
     "# {...} is the syntax for a set literal in Python.\n",
     "allowedPunct = {\",\", \".\", \" \"}.union(string.ascii_lowercase)\n",
+    "\n",
+    "# Use full for BoF and others. \n",
+    "# Use part in order to keep some data important if we need to match tuples from the text based on natual speach\n",
+    "path_swAni_full = \"/media/sf_Shared_Folder/stopwordsFULL.txt\"\n",
+    "path_swAni_part = \"/media/sf_Shared_Folder/stopwords.txt\"\n",
+    "\n",
+    "swFile = open(path_swAni_full, 'r', encoding = \"ISO-8859-1\")\n",
+    "stopWords = swFile.read().split()\n",
+    "print(stopWords)\n",
     "\n",
     "#stopWords = stopwords.words('english')\n",
     "#print(stopWords)\n",
@@ -145,7 +162,13 @@
     "            tokens = iFile.read()\n",
     "            tokens = word_tokenize(tokens)\n",
     "            for tok in tokens:\n",
-    "                oFile.write(tok+\"\\n\")\n",
+    "                UNallowedPunct = {\",\", \".\", \"[\", \"]\", \"=\", \"*\", \"/\", \"+\", \n",
+    "                                  \"-\", \"%\", \"#\", \"?\", \"(\", \")\", \"-\", \"_\", \n",
+    "                                  \";\", \":\", \"'\", \"\\\"\", \"^\", \"`\"}.union(string.ascii_lowercase)\n",
+    "                if tok in UNallowedPunct:\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    oFile.write(tok+\"\\n\")\n",
     "        oFile.close()\n",
     "    else:\n",
     "        pass\n",
@@ -166,7 +189,6 @@
     "            tokens = []\n",
     "            \n",
     "            for tok in taggedTok:\n",
-    "# UNallowedPunct = {\",\", \".\", \"[\", \"]\", \"*\", \"/\", \"+\", \"-\", \"%\", \"#\", \"(\", \")\", \"-\", \"_\", \";\", \":\", \"'\", \"\\\"\", \"`\"}.union(string.ascii_lowercase)\n",
     "                UNallowedPunct = {\",\", \".\", \"[\", \"]\"}.union(string.ascii_lowercase)\n",
     "                if tok[0] in UNallowedPunct:\n",
     "                    # if token is a punctuation symbol, don't save in the output\n",
@@ -177,12 +199,38 @@
     "                    \n",
     "        oFile.close()\n",
     "    else:\n",
-    "        pass"
+    "        pass\n",
+    "    \n",
+    "\n",
+    "# function #4 - partOfSpeechTag Tagging\n",
+    "def rmStopWords(iFile, oPathNoExt):\n",
+    "    \n",
+    "    if not iFile.name.endswith(\"_tokens.txt\"):\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(\"[Removing StopWords: ] \" + iFile.name)\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        # print(\"BASE NAME: \", baseName)\n",
+    "        OFName = baseName + \".en_noStopWordsALL.txt\"\n",
+    "        \n",
+    "        tokenList = iFile.read().split()\n",
+    "        \n",
+    "        with open(OFName, \"w\") as oFile:     \n",
+    "            final = []\n",
+    "            \n",
+    "            for tok in tokenList:\n",
+    "                if tok in stopWords:\n",
+    "                    # if token is a stop word, don't save in the output (skip)\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    final.append(tok)\n",
+    "                    oFile.write(tok+\"\\n\")\n",
+    "            oFile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -197,10 +245,8 @@
    "source": [
     "# ----------------------------------------------- PROGRAM  -------------------------------------------------------\n",
     "\n",
-    "# LOCATION OF TEST FILES: /media/sf_Shared_Folder/TEST/RAW\n",
-    "# path = \"/media/sf_Shared_Folder/Courses/Coursera Downloads Processed\"\n",
-    "# path = \"/media/sf_Shared_Folder/TEST/RAW\"\n",
-    "path = \"/media/sf_Shared_Folder/Coursera Downloads PreProcessed\"\n",
+    "#path = \"/media/sf_Shared_Folder/TEST/RAW\"   # TEST DATA PATH\n",
+    "path = \"/media/sf_Shared_Folder/Coursera Downloads PreProcessed\"   # REAL DATA PATH\n",
     "\n",
     "counter = 0\n",
     "\n",
@@ -239,6 +285,8 @@
     "                    splitSentences(curFile, fileExtRemoved)\n",
     "                    sentTokenize(curFile, fileExtRemoved)\n",
     "                    POStag(curFile, fileExtRemoved)\n",
+    "                    rmStopWords(curFile, fileExtRemoved)\n",
+    "                        \n",
     "                    \n",
     "                finally: \n",
     "                    curFile.close()\n",
@@ -299,9 +347,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 300,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-300-9ce4bd01eb19>, line 45)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-300-9ce4bd01eb19>\"\u001b[0;36m, line \u001b[0;32m45\u001b[0m\n\u001b[0;31m    elif :\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# traverse each folder and sub-folder\n",
     "# create an array of files to add each file in it\n",
@@ -332,9 +389,39 @@
     "are there issues that arise because of these switches that we don't fully know how to deal with\n",
     "now, this module will deal with all of this, \"\"\")\n",
     "\n",
+    "docnames = []\n",
     "\n",
+    "for root, subdirs, files in os.walk(path):\n",
     "\n",
+    "    for curFile in os.listdir(root):\n",
     "\n",
+    "        filePath = os.path.join(root, curFile)\n",
+    "\n",
+    "        if os.path.isdir(filePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            # check for file extension and if not TXT, continue and disregard the current file\n",
+    "            if not filePath.endswith(\".txt\"):\n",
+    "                pass\n",
+    "            elif filePath.endswith(\".txt\"): \n",
+    "                try: \n",
+    "                    docnames.append(curFile.name)\n",
+    "                    print(curFile.name)\n",
+    "                    \n",
+    "                finally: \n",
+    "                    curFile.close()\n",
+    "            else:\n",
+    "                pass\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ------------------------------------ TF-IDF --------------------------------------------------------\n",
     "\n",
     "# arrays to hold the terms found in text and also a custom list to test domain-specific terms\n",
@@ -347,7 +434,7 @@
     "\n",
     "doclist = [document1, document2, document3]\n",
     "#doclist = [document4, document5, document6]\n",
-    "docnames = [\"01_research-data-defined.en.txt\",\"02_types-of-data-and-metadata.en.txt\",\"03_research-data-lifecycle.en.txt\"]\n",
+    "# docnames = [\"01_research-data-defined.en.txt\",\"02_types-of-data-and-metadata.en.txt\",\"03_research-data-lifecycle.en.txt\"]\n",
     "topNwords = 15;\n",
     "\n",
     "for i, doc in enumerate(doclist):\n",
@@ -360,10 +447,15 @@
     "         exportedList.append(term)\n",
     "    \n",
     "    print(table)\n",
-    "#    print(exportedWords, \"\\n\")\n",
-    "\n",
-    "\n",
-    "\n",
+    "#    print(exportedWords, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ----------------------------------------- NLTK, WORDNET -------------------------------------------\n",
     "print(\"\\n\\n------- EXPORTED TERMS in WORDNET ----------\") \n",
     "for word in exportedList:\n",
